# agentic_speculative_knowledge

./: .gitignore  README.md  pyproject.toml
.agents/skills/: infer  memorize  recall  speculate
.devcontainer/: devcontainer.json  docker-compose.yml  install-act.sh  post-start.sh
.github/: copilot-instructions.md
.github/scripts/: sync-upstream.sh
.github/workflows/: copilot-setup-steps.yml  daily-feature-extraction.lock.yml  daily-feature-extraction.md  sync-from-upstream.yml  train-prompt.md
docs/: SKILLS_USAGE.md
notebooks/: 01_active_memory_basics.ipynb  02_speculative_inference_and_facets.ipynb  03_historical_recall.ipynb  04_knowledge_curation_and_normalization.ipynb  04_terminus_temporal_graph_memory.ipynb  05_governance_and_promotion.ipynb  05_knowledge_discovery_through_facets.ipynb  06_manifold_mapping_for_discovery.ipynb  06_reliable_delivery_and_checkpoints.ipynb
skills/infer/: SKILL.md
skills/memorize/: SKILL.md
skills/reflect/: SKILL.md
skills/speculate/: SKILL.md
src/active_memory/: atomic_write.py  checkpoint.py  context_builder.py  entity_card.py  layout.py  models.py  serializers.py  session_manager.py  task_card.py  working_set.py
src/api/: memory_manager.py
src/claims/: extractor.py  models.py  validator.py  writer.py
src/git_layer/: service.py
src/governance/: promotion.py  rules.py
src/inference/: __init__.py  generator.py  models.py
src/journal/: appender.py  models.py  outbox.py
src/manifold_sidecar/: __init__.py  models.py  service.py
src/normalization/: duplicate_detector.py  entity_linker.py  mapper.py  (+1 more)
(+39 files in other folders)
